# gesamt_distance

./: .gitignore  CMakeLists.txt  README.md  README_original
distance/: CMakeLists.txt  GetCandidates.java  ProteinDistance.cpp  ProteinDistance.h  ProteinDistance.java  ProteinNativeQScoreDistance.cpp  ProteinNativeQScoreDistance.h  ProteinNativeQScoreDistance.java  TestJava.java  calculate_matrix.cpp  chain2bin.cpp  common.h  config.h  config.h.in  create_binary_alphafold_archive.cpp  create_binary_archive.cpp  create_binary_pdbe_archive.cpp  distance.cpp  distance.h  get_chains.cpp  get_sizes.cpp  make_archive.py  protein_distance.cpp  protein_distance.h  python_distance.cpp  sample.cpp  test_distance.cpp  test_length.cpp  test_parallel.cpp
gesamt_src/: CMakeLists.txt  gesamt.cpp  gesamt_domains.cpp  gesamt_domains.h  gesamt_input.cpp  gesamt_input.h  gesamt_multiple.cpp  gesamt_multiple.h  gesamt_pairwise.cpp  gesamt_pairwise.h  gesamt_sheaf.cpp  gesamt_sheaf.h  gesamt_usage.cpp  gesamt_usage.h  gesamt_utils.cpp  gesamt_utils.h
gesamt_src/gesamtlib/: CMakeLists.txt  gsmt_aligner.cpp  gsmt_aligner.h  gsmt_archive.cpp  gsmt_archive.h  gsmt_base.cpp  gsmt_base.h  gsmt_clusterer.cpp  gsmt_clusterer.h  gsmt_defs.h  gsmt_domains.cpp  gsmt_domains.h  gsmt_domdata.cpp  gsmt_domdata.h  gsmt_dynam.cpp  gsmt_dynam.h  gsmt_hits.cpp  gsmt_hits.h  gsmt_index.cpp  gsmt_index.h  gsmt_maligner.cpp  gsmt_maligner.h  gsmt_mamap.cpp  gsmt_mamap.h  gsmt_maoutput.cpp  gsmt_maoutput.h  gsmt_mastructure.cpp  gsmt_mastructure.h  gsmt_model.cpp  gsmt_model.h  gsmt_msuperposition.cpp  gsmt_msuperposition.h  gsmt_output.cpp  gsmt_output.h  gsmt_pdbscanthread.cpp  gsmt_pdbscanthread.h  gsmt_refiner.cpp  gsmt_refiner.h  gsmt_segcluster.cpp  gsmt_segcluster.h  (+38 more)
gesamt_src/mmdb2/: CMakeLists.txt  mmdb_io_file.cpp
gesamt_src/rvapi/: CMakeLists.txt  rvapi_combobox.cpp  rvapi_combobox.h  rvapi_content.cpp  rvapi_content.h  rvapi_data.cpp  rvapi_data.h  rvapi_defs.h  rvapi_docheader.cpp  rvapi_docheader.h  rvapi_document.cpp  rvapi_document.h  rvapi_fieldset.cpp  rvapi_fieldset.h  rvapi_form.cpp  rvapi_form.h  rvapi_global.h  rvapi_graph.cpp  rvapi_graph.h  rvapi_grid.cpp  rvapi_grid.h  rvapi_input.cpp  rvapi_input.h  rvapi_interface.cpp  rvapi_interface.h  rvapi_loggraph.cpp  rvapi_loggraph.h  rvapi_node.cpp  rvapi_node.h  rvapi_panel.cpp  rvapi_panel.h  rvapi_plot.cpp  rvapi_plot.h  rvapi_progressbar.cpp  rvapi_progressbar.h  rvapi_radar.cpp  rvapi_radar.h  rvapi_section.cpp  rvapi_section.h  rvapi_tab.cpp  (+11 more)
tools/: fix_distances.py  get_gesamt_times.py  get_ids_from_gesamt_archive_log.py  get_most_similar_gesamt.py  get_most_similar_gesamt_json.py  get_times_for_gt.py  run_most_similar_gesamt.py  times.py
