add_library(gesamtlib
        gsmt_aligner.cpp
        gsmt_aligner.h
        gsmt_archive.cpp
        gsmt_archive.h
        gsmt_base.cpp
        gsmt_base.h
        gsmt_clusterer.cpp
        gsmt_clusterer.h
        gsmt_defs.h
        gsmt_domains.cpp
        gsmt_domains.h
        gsmt_domdata.cpp
        gsmt_domdata.h
        gsmt_dynam.cpp
        gsmt_dynam.h
        gsmt_hits.cpp
        gsmt_hits.h
        gsmt_index.cpp
        gsmt_index.h
        gsmt_maligner.cpp
        gsmt_maligner.h
        gsmt_mamap.cpp
        gsmt_mamap.h
        gsmt_maoutput.cpp
        gsmt_maoutput.h
        gsmt_mastructure.cpp
        gsmt_mastructure.h
        gsmt_model.cpp
        gsmt_model.h
        gsmt_msuperposition.cpp
        gsmt_msuperposition.h
        gsmt_output.cpp
        gsmt_output.h
        gsmt_pdbscanthread.cpp
        gsmt_pdbscanthread.h
        gsmt_refiner.cpp
        gsmt_refiner.h
        gsmt_segcluster.cpp
        gsmt_segcluster.h
        gsmt_seqscanthread.cpp
        gsmt_seqscanthread.h
        gsmt_seqsheafs.cpp
        gsmt_seqsheafs.h
        gsmt_sequence.cpp
        gsmt_sequence.h
        gsmt_sheaf.cpp
        gsmt_sheaf.h
        gsmt_sheafdata.cpp
        gsmt_sheafdata.h
        gsmt_sortclusters.cpp
        gsmt_sortclusters.h
        gsmt_sortpairs.cpp
        gsmt_sortpairs.h
        gsmt_structscanthread.cpp
        gsmt_structscanthread.h
        gsmt_structure.cpp
        gsmt_structure.h
        gsmt_subseqscanthread.cpp
        gsmt_subseqscanthread.h
        gsmt_superpose.cpp
        gsmt_superpose.h
        gsmt_superposition.cpp
        gsmt_superposition.h
        gsmt_svd.cpp
        gsmt_svd.h
        gsmt_threadbase.cpp
        gsmt_threadbase.h
        gsmt_utils.cpp
        gsmt_utils.h
        gsmt_viewer.cpp
        gsmt_viewer.h
        json_.cpp
        json_.h
        memio_.cpp
        memio_.h
        shiftsort_.cpp
        shiftsort_.h
)

target_include_directories(gesamtlib PUBLIC ..)
target_link_libraries(gesamtlib mmdb2 rvapi)
