add_library(mmdb2
        hybrid_36.cpp
        hybrid_36.h
        mmdb_atom.cpp
        mmdb_atom.h
        mmdb_bondmngr.cpp
        mmdb_bondmngr.h
        mmdb_chain.cpp
        mmdb_chain.h
        mmdb_cifdefs.cpp
        mmdb_cifdefs.h
        mmdb_coormngr.cpp
        mmdb_coormngr.h
        mmdb_cryst.cpp
        mmdb_cryst.h
        mmdb_defs.h
        mmdb_ficif.cpp
        mmdb_ficif.h
        mmdb_io_file.cpp
        mmdb_io_file.h
        mmdb_io_stream.cpp
        mmdb_io_stream.h
        mmdb_machine_.cpp
        mmdb_machine_.h
        mmdb_manager.cpp
        mmdb_manager.h
        mmdb_mask.cpp
        mmdb_mask.h
        mmdb_math_.cpp
        mmdb_math_.h
        mmdb_math_align.cpp
        mmdb_math_align.h
        mmdb_math_bfgsmin.cpp
        mmdb_math_bfgsmin.h
        mmdb_math_fft.cpp
        mmdb_math_fft.h
        mmdb_math_graph.cpp
        mmdb_math_graph.h
        mmdb_math_linalg.cpp
        mmdb_math_linalg.h
        mmdb_math_rand.cpp
        mmdb_math_rand.h
        mmdb_mattype.cpp
        mmdb_mattype.h
        mmdb_mmcif_.cpp
        mmdb_mmcif_.h
        mmdb_model.cpp
        mmdb_model.h
        mmdb_root.cpp
        mmdb_root.h
        mmdb_rwbrook.cpp
        mmdb_rwbrook.h
        mmdb_selmngr.cpp
        mmdb_selmngr.h
        mmdb_seqsuperpose.cpp
        mmdb_seqsuperpose.h
        mmdb_symop.cpp
        mmdb_symop.h
        mmdb_tables.cpp
        mmdb_tables.h
        mmdb_title.cpp
        mmdb_title.h
        mmdb_uddata.cpp
        mmdb_uddata.h
        mmdb_utils.cpp
        mmdb_utils.h
        mmdb_xml_.cpp
        mmdb_xml_.h
)
