add_library(rvapi
        rvapi_combobox.cpp
        rvapi_combobox.h
        rvapi_content.cpp
        rvapi_content.h
        rvapi_data.cpp
        rvapi_data.h
        rvapi_defs.h
        rvapi_docheader.cpp
        rvapi_docheader.h
        rvapi_document.cpp
        rvapi_document.h
        rvapi_fieldset.cpp
        rvapi_fieldset.h
        rvapi_form.cpp
        rvapi_form.h
        rvapi_global.h
        rvapi_graph.cpp
        rvapi_graph.h
        rvapi_grid.cpp
        rvapi_grid.h
        rvapi_input.cpp
        rvapi_input.h
        rvapi_interface.cpp
        rvapi_interface.h
        rvapi_loggraph.cpp
        rvapi_loggraph.h
        rvapi_node.cpp
        rvapi_node.h
        rvapi_panel.cpp
        rvapi_panel.h
        rvapi_plot.cpp
        rvapi_plot.h
        rvapi_progressbar.cpp
        rvapi_progressbar.h
        rvapi_radar.cpp
        rvapi_radar.h
        rvapi_section.cpp
        rvapi_section.h
        rvapi_tab.cpp
        rvapi_tab.h
        rvapi_table.cpp
        rvapi_table.h
        rvapi_tabledata.cpp
        rvapi_tabledata.h
        rvapi_tasks.cpp
        rvapi_tasks.h
        rvapi_text.cpp
        rvapi_text.h
        rvapi_treewidget.cpp
        rvapi_treewidget.h
)
